starting to work correctly

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,20 +1,21 @@
 <header>
-    <div class="container">
-        <div class="logo">
-            <span class="logo__text">ECO</span>
-            <img src="../../assets/logo.png" alt="logo" class="logo__img">
-        </div>
+  <div class="container">
+    <a href="#"
+      ><div class="logo">
+        <span class="logo__text">ECO</span>
+        <img src="../../assets/logo.png" alt="logo" class="logo__img" /></div
+    ></a>
 
-        <div class="navigation">
-            <ul>
-                <li><a href="#">Блог</a></li>
-                <li><a href="#">Сдать сырье</a></li>
-                <li><a href="#">Правила сортировки</a></li>
-            </ul>
-            
-            <a href="#">
-                <img src="../../assets/home.png" alt="home">
-            </a>
-        </div>
+    <div class="navigation">
+      <ul>
+        <li><a href="#">Блог</a></li>
+        <li><a href="#">Сдать сырье</a></li>
+        <li><a href="#">Правила сортировки</a></li>
+      </ul>
+
+      <a href="#">
+        <img src="../../assets/home.png" alt="home" />
+      </a>
     </div>
+  </div>
 </header>
