[ADD] routing structure, taxi page temlate

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,6 +11,7 @@
         <li><a href="#">Блог</a></li>
         <li><a href="#">Сдать сырье</a></li>
         <li><a href="#">Правила сортировки</a></li>
+        <li><a routerLink="taxi">Заказать эко-такси</a></li>
       </ul>
 
       <a href="#">
