--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,9 +8,9 @@
 
     <div class="navigation">
       <ul>
-        <li><a href="#">Блог</a></li>
-        <li><a href="#">Сдать сырье</a></li>
-        <li><a href="#">Правила сортировки</a></li>
+        <li><a href="#">Eco-taxi order</a></li>
+        <li><a href="#">Hand over raw materials</a></li>
+        <li><a href="#"> Sorting rules</a></li>
       </ul>
 
       <a href="#">
