[ADD] connection with BE

--- a/src/app/pages/rules-page/rules-page.component.scss
+++ b/src/app/pages/rules-page/rules-page.component.scss
@@ -1,8 +1,8 @@
 .bg {
-    background: url("../../../assets/bgTaxiPage.png");
+    background: url("../../../assets/bgRules.jpg");
     width: 100%;
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
+    background-position: left;
     padding: 284px 0 184px;
 }
