--- a/src/app/rules/rules.component.html
+++ b/src/app/rules/rules.component.html
@@ -5,7 +5,7 @@
     quantitative growth and scope of our activity is an interesting experiment
     corresponding to the conditions of activation. The task of the organization,
     in particular the new model of organizational activity, provides a wide
-    range of (specialists)
+    range of (specialists) Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque esse earum vero et corporis reprehenderit eligendi, doloremque sapiente ipsam. Voluptatibus suscipit, eius perferendis cum nam repudiandae aperiam. Quo in earum consectetur sint distinctio, vero atque dolorum ratione? Obcaecati quasi consequuntur.
   </p>
   <div class="ok-button">
     <button>OK</button>
