--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,3 +1,3 @@
 <div class="map" id="map" class="match-parent"></div>
-<app-comments *ngIf="showComments" [id]="currentServiceId" (close)="showComments = false"></app-comments>
+<app-comments [class.dnone]="!showComments" (close)="showComments = false"></app-comments>
 
