[ADD] comment component

--- a/src/app/comments/comments.component.html
+++ b/src/app/comments/comments.component.html
@@ -13,30 +13,50 @@
     <span [class.active]="service.rating_quantity > 4"></span>
   </div>
 
-  <p>{{service.description}}</p>
-
+  <p class="types-of-sort">plastic, metal, waste, paper</p>
   <div class="options">
     <div>
-      <img
-        id="btn"
-        src="../../assets/phone.png"
-        width="24"
-        height="24"
-      />
+
+      <img id="btn" src="../../assets/phone.png" width="24" height="24" />
     </div>
+
     <div>
-      <img
-        src="../../assets/letter.png"
-        width="27"
-        height="20"
-      />
+
+      <img src="../../assets/letter.png" width="27" height="20" />
     </div>
+
     <div>
-      <img
-        src="../../assets/net.png"
-        width="25"
-        height="24"
-      />
+
+      <img src="../../assets/net.png" width="25" height="24" />
     </div>
+
   </div>
+
+  <p>Adress, 6 </p>
+
+
+  <div class="comments-block">
+    <div class="comments-list">
+      <h4>Comments</h4>
+      <div class="comment">
+        Равным образом рамки и место обучения кадров позволяет оценить значение
+      </div>
+    </div>
+
+    <form>
+      <div class="comment-send">
+        <div class="comment-send-header">
+          <div class="star"></div>
+          <button>
+            <img src="../../assets/send-comment .png">
+          </button>
+        </div>
+        <div>
+          <input placeholder="Write comment...">
+        </div>
+      </div>
+      
+    </form>
+  </div>
+
 </div>
