--- a/src/app/filter/filter.component.html
+++ b/src/app/filter/filter.component.html
@@ -9,7 +9,8 @@
       [(ngModel)]="plastic"
       (change)="onToggle('plastic')"
     />
-    <label for="plastic">Plastic</label>
+    <label for="plastic"></label>
+    <span>Plastic</span>
   </div>
 
   <div>
@@ -20,7 +21,8 @@
       [(ngModel)]="metal"
       (change)="onToggle('metal')"
     />
-    <label for="metal">Metal</label>
+    <label for="metal"></label>
+    <span>Metal</span>
   </div>
 
   <div>
@@ -31,18 +33,20 @@
       [(ngModel)]="paper"
       (change)="onToggle('paper')"
     />
-    <label for="paper">Paper</label>
+    <label for="paper"></label>
+    <span>Paper</span>
   </div>
 
   <div>
     <input
       type="checkbox"
-      id="battery"
-      name="battery"
+      id="batteries"
+      name="batteries"
       [(ngModel)]="batteries"
       (change)="onToggle('batteries')"
     />
-    <label for="battery">Batteries</label>
+    <label for="batteries"></label>
+    <span>Batteries</span>
   </div>
 
   <div>
@@ -53,7 +57,8 @@
       [(ngModel)]="glass"
       (change)="onToggle('glass')"
     />
-    <label for="glass">Glass</label>
+    <label for="glass"></label>
+    <span>Glass</span>
   </div>
 
   <div>
@@ -64,29 +69,32 @@
       [(ngModel)]="clothes"
       (change)="onToggle('clothes')"
     />
-    <label for="clothes">Clothes</label>
+    <label for="clothes"></label>
+    <span>Clothes</span>
   </div>
 
   <div>
     <input
       type="checkbox"
-      id="lightBulbs"
-      name="lightBulbs"
+      id="lightbulbs"
+      name="lightbulbs"
       [(ngModel)]="lightbulbs"
       (change)="onToggle('lightbulbs')"
     />
-    <label for="lightBulbs">Light-bulbs</label>
+    <label for="lightbulbs"></label>
+    <span>Light bulbs</span>
   </div>
 
   <div>
     <input
       type="checkbox"
-      id="eWaste"
-      name="eWaste"
+      id="ewaste"
+      name="ewaste"
       [(ngModel)]="ewaste"
       (change)="onToggle('ewaste')"
     />
-    <label for="eWaste">E-Waste</label>
+    <label for="ewaste"></label>
+    <span>E-Waste</span>
   </div>
 
   <div>
@@ -97,7 +105,8 @@
       [(ngModel)]="organic"
       (change)="onToggle('organic')"
     />
-    <label for="organic">Organic</label>
+    <label for="organic"></label>
+    <span>Organic</span>
   </div>
 
   <!-- <p>Terms of payment</p>
