--- a/src/app/map/map.component.scss
+++ b/src/app/map/map.component.scss
@@ -8,3 +8,13 @@
   display: none;
 }
 
+.block {
+  width: 100px;
+  height: 100px;
+  z-index: 5;
+  background-color: black;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
