[FIX] comments-block layout

--- a/src/app/comments/comments.component.html
+++ b/src/app/comments/comments.component.html
@@ -32,11 +32,11 @@
 
   </div>
 
-  <p>Adress, 6 </p>
+  <p>{{service.address}} </p>
 
-
+  <h4>Comments</h4>
   <div class="comments-block">
-    <h4>Comments</h4>
+    
     <div class="comments-list">
       
       <div class="comment" *ngFor="let comment of service.comments">
