--- a/src/app/comments/comments.component.scss
+++ b/src/app/comments/comments.component.scss
@@ -77,6 +77,7 @@ button {
     padding: 10px 15px;
     margin-bottom: 15px;
     font-size: 14px;
+    max-width: 95%;
   }
 }
 
@@ -84,7 +85,7 @@ button {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 400px;
+  height: 350px;
   .comments-list {
     overflow: scroll;
   }
