bugs with comments

--- a/src/app/comments/comments.component.html
+++ b/src/app/comments/comments.component.html
@@ -37,7 +37,7 @@
   <h4>Comments</h4>
   <div class="comments-block">
     
-    <div class="comments-list">
+    <div class="comments-list" #list>
       
       <div class="comment" *ngFor="let comment of service.comments">
         {{comment.content}}
