--- a/src/app/comments/comments.component.scss
+++ b/src/app/comments/comments.component.scss
@@ -95,16 +95,34 @@ button {
 }
 
 
-.comment-send {
-  background: rgba(255, 255, 255, 0.65);
-  box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 5px;
-  width: 100%;
-  padding: 5px 12px 10px 12px;
+// .comment-send {
+//   background: rgba(255, 255, 255, 0.65);
+//   box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.25);
+//   border-radius: 5px;
+//   width: 100%;
+//   padding: 5px 12px 10px 12px;
 
-  // div {
-  //   margin-bottom: 10px;
-  // }
+
+  .comment-send {
+    background: rgba(255, 255, 255, 0.65);
+    box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
+    width: 100%;
+    padding: 5px 15px;
+  
+    div {
+      margin-bottom: 10px;
+    }
+  
+    textarea {
+      width: 100%;
+      resize: none;
+    }
+  
+    textarea::-webkit-scrollbar {
+      width: 0;
+    }
+  
 
   .star {
     margin: 0;
