--- a/src/app/comments/comments.component.scss
+++ b/src/app/comments/comments.component.scss
@@ -138,6 +138,11 @@ button {
   justify-content: space-between;
 }
 
+.invalid-form {
+  font-size: 10px;
+  color: red;
+}
+
 
 .rating-area {
 	overflow: hidden;
