--- a/src/app/comments/comments.component.scss
+++ b/src/app/comments/comments.component.scss
@@ -1,9 +1,10 @@
 .comments {
   position: absolute;
   min-width: 320px;
-  max-width: 360px;
-  left: 6%;
-  top: 131px;
+  max-width: 480px;
+  left: 0;
+  top: 77px;
+  height: 90%;
   z-index: 3;
   padding: 20px;
   background: #ffffff;
@@ -11,7 +12,6 @@
   box-sizing: border-box;
   border-radius: 5px;
   font-family: "Roboto";
-  word-wrap: break-word;
 }
 
 button {
@@ -77,7 +77,15 @@ button {
     padding: 10px 15px;
     margin-bottom: 15px;
     font-size: 14px;
-    max-width: 95%;
+    word-wrap: break-word;
+
+    div {
+      text-align: right;
+      font-size: 12px;
+      color: gray;
+      font-style: italic;
+      padding-top: 8px;
+    }
   }
 }
 
@@ -85,14 +93,16 @@ button {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 300px;
+  height: 360px;
   .comments-list {
-    overflow: auto;
+    overflow: scroll;
+    scroll-behavior: smooth;
   }
   .comments-list::-webkit-scrollbar {
     width: 0;
   }
 }
+
 
 
 // .comment-send {
