--- a/src/app/comments/comments.component.scss
+++ b/src/app/comments/comments.component.scss
@@ -1,10 +1,10 @@
-.comments {
+.comments-section {
   position: absolute;
   min-width: 320px;
   max-width: 480px;
   left: 0;
-  top: 77px;
-  height: 90%;
+  top: 80px;
+  height: 637px;
   z-index: 3;
   padding: 20px;
   background: #ffffff;
@@ -12,6 +12,12 @@
   box-sizing: border-box;
   border-radius: 5px;
   font-family: "Roboto";
+  overflow: scroll;
+  scroll-behavior: smooth;
+
+  &::-webkit-scrollbar {
+    width: 0;
+  }
 }
 
 button {
@@ -19,7 +25,7 @@ button {
 }
 
 .title {
-  font-size: 20px;
+  font-size: 24px;
   display: flex;
   justify-content: space-between;
 }
@@ -27,12 +33,15 @@ button {
 .types-of-sort {
   color: #314506;
   font-weight: bold;
-  margin-bottom: 10px;
+  span {
+    font-weight: bold;
+    margin-right: 8px;
+  }
 }
 
 .rating-result {
   width: 265px;
-  margin: 10px 0;
+  margin: 15px 0;
 }
 .rating-result span {
   padding: 0;
@@ -54,7 +63,7 @@ button {
   display: flex;
   justify-content: flex-start;
   align-items: flex-end;
-  margin: 10px 0;
+  margin: 20px 0;
   img {
     margin-right: 24px;
   }
@@ -65,37 +74,38 @@ button {
   }
 }
 
-.comments {
-  h4 {
-    font-size: 24px;
-    padding: 15px 0;
-  }
+.comment {
+  // border: 1px solid #8d8b88;
+  border-radius: 5px;
+  padding: 10px 15px;
+  margin-bottom: 15px;
+  font-size: 17px;
+  word-wrap: break-word;
+  background-color: #a1ca8c;
+  color: #fff;
 
-  .comment {
-    border: 1px solid #8d8b88;
-    border-radius: 5px;
-    padding: 10px 15px;
-    margin-bottom: 15px;
-    font-size: 14px;
-    word-wrap: break-word;
+  div {
+    text-align: right;
+    font-size: 12px;
 
-    div {
-      text-align: right;
-      font-size: 12px;
-      color: gray;
-      font-style: italic;
-      padding-top: 8px;
-    }
+    font-style: italic;
+    padding-top: 8px;
   }
 }
 
 .comments-block {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  height: 360px;
+  position: relative;
+
+  h4 {
+    font-size: 20px;
+    padding: 15px 0;
+  }
+
   .comments-list {
     overflow: scroll;
+    height: 250px;
     scroll-behavior: smooth;
   }
   .comments-list::-webkit-scrollbar {
@@ -103,7 +113,34 @@ button {
   }
 }
 
+.types-waste-img {
+  width: 360px;
+  margin: 20px auto;
+  -webkit-box-shadow: 0px 5px 24px 0px rgba(34, 60, 80, 0.12);
+  -moz-box-shadow: 0px 5px 24px 0px rgba(34, 60, 80, 0.12);
+  box-shadow: 0px 5px 24px 0px rgba(34, 60, 80, 0.12);
+  img {
+    width: 100%;
+    border-radius: 5px;
+    object-fit: cover;
+  }
+}
 
+.no-comment {
+  color: #000 !important;
+} 
+
+.adress {
+  font-size: 16px;
+  margin: 10px 0;
+  color: rgb(90, 90, 90);
+
+  span {
+    font-weight: bold;
+    margin-right: 8px;
+    color: #000;
+  }
+}
 
 // .comment-send {
 //   background: rgba(255, 255, 255, 0.65);
@@ -112,27 +149,25 @@ button {
 //   width: 100%;
 //   padding: 5px 12px 10px 12px;
 
+.comment-send {
+  background: rgba(255, 255, 255, 0.65);
+  box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
+  width: 100%;
+  padding: 5px 15px;
 
-  .comment-send {
-    background: rgba(255, 255, 255, 0.65);
-    box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 5px;
+  div {
+    margin-bottom: 5px;
+  }
+
+  textarea {
     width: 100%;
-    padding: 5px 15px;
-  
-    div {
-      margin-bottom: 10px;
-    }
-  
-    textarea {
-      width: 100%;
-      resize: none;
-    }
-  
-    textarea::-webkit-scrollbar {
-      width: 0;
-    }
-  
+    resize: none;
+  }
+
+  textarea::-webkit-scrollbar {
+    width: 0;
+  }
 
   .star {
     margin: 0;
@@ -153,44 +188,43 @@ button {
   color: red;
 }
 
-
 .rating-area {
-	overflow: hidden;
+  overflow: hidden;
 
-	margin: 0 auto;
+  margin: 0 auto;
 }
 .rating-area:not(:checked) > input {
-	display: none;
+  display: none;
 }
 .rating-area:not(:checked) > label {
-	float: right;
-	width: 26px;
-	padding: 0;
-	cursor: pointer;
-	font-size: 24px;
-	line-height: 32px;
-	color: lightgrey;
-	text-shadow: 1px 1px #bbb;
+  float: right;
+  width: 26px;
+  padding: 0;
+  cursor: pointer;
+  font-size: 24px;
+  line-height: 32px;
+  color: lightgrey;
+  text-shadow: 1px 1px #bbb;
 }
 .rating-area:not(:checked) > label:before {
-	content: '★';
+  content: "★";
 }
 .rating-area > input:checked ~ label {
-	color: gold;
-	text-shadow: 1px 1px #c60;
+  color: gold;
+  text-shadow: 1px 1px #c60;
 }
 .rating-area:not(:checked) > label:hover,
 .rating-area:not(:checked) > label:hover ~ label {
-	color: gold;
+  color: gold;
 }
 .rating-area > input:checked + label:hover,
 .rating-area > input:checked + label:hover ~ label,
 .rating-area > input:checked ~ label:hover,
 .rating-area > input:checked ~ label:hover ~ label,
 .rating-area > label:hover ~ input:checked ~ label {
-	color: gold;
-	text-shadow: 1px 1px goldenrod;
+  color: gold;
+  text-shadow: 1px 1px goldenrod;
 }
 .rate-area > label:active {
-	position: relative;
+  position: relative;
 }
