--- a/src/app/comments/comments.component.html
+++ b/src/app/comments/comments.component.html
@@ -13,7 +13,7 @@
     <span [class.active]="service.rating_quantity > 4"></span>
   </div>
 
-  <div>
+  <div class="images">
     <div class="types-waste-img" *ngIf="service.type === 'Plastic'"> 
       <img src="../../assets/types-of-waste-img/plastic.jpg" alt="plactic">
     </div>
