--- a/src/app/rules/rules.component.html
+++ b/src/app/rules/rules.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <h1>Sorting Rules</h1>
   <p>
     Likewise, the scope and location of staff training allows one to assess the
     importance of significant financial and administrative conditions. Thus, the
