--- a/src/app/rules/rules.component.scss
+++ b/src/app/rules/rules.component.scss
@@ -11,7 +11,7 @@
 }
 
 .ok-button {
-    margin: 80px auto 0;
+    margin: 60px auto 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -23,5 +23,16 @@
         color: #fff;
         font-family: Roboto;
         border-radius: 5px;
+        cursor: pointer;
     }
+    button:hover {
+        background-color: #859e4e;
+    }
+}
+
+h1 {
+    text-align: center;
+    margin-bottom: 48px;
+    font-size: 32px;
+    font-weight: bold;
 }
